# ghcid

./: README.md  default.nix  evans-ghcid.cabal
exe/: Main.hs  Session.hs  Wait.hs
exe/Ghcid/: Terminal.hs
lib/: Ghcid.hs
lib/Ghcid/: Escape.hs  Parser.hs  Types.hs  Util.hs
src/: CliOptions.hs  Ghcid.hs  Main.hs  Session.hs  Wait.hs
src/Ghcid/: Escape.hs  Parser.hs  Types.hs  Util.hs
