cabal-version: 3.0

name:       evans-ghcid
version:    0.8.7
category:   Development
author:     Neil Mitchell <ndmitchell@gmail.com>, jpmoresmau
maintainer: Neil Mitchell <ndmitchell@gmail.com>
homepage:   https://github.com/evanrelf/ghcid
license:    BSD-3-Clause
copyright:  Neil Mitchell 2014-2020


common common
  build-depends:
    , base   ^>= 4.13.0
    , relude ^>= 0.7.0
  mixins:
    , base hiding (Prelude)
    , relude
        ( Relude as Prelude
        , Relude.Extra.Enum
        , Relude.Extra.Tuple
        )
  default-language: Haskell2010
  default-extensions:
    , BlockArguments
    , DeriveAnyClass
    , DeriveFunctor
    , DeriveGeneric
    , DerivingStrategies
    , DerivingVia
    , GeneralizedNewtypeDeriving
    , LambdaCase
    , OverloadedStrings
  ghc-options:
    -Wall
    -Wcompat
    -Werror=incomplete-record-updates
    -Werror=incomplete-uni-patterns
    -Werror=missing-fields
    -Werror=partial-fields
    -Widentities
    -Wmissing-home-modules
    -Wredundant-constraints
    -foptimal-applicative-do
    -fshow-warning-groups
    -- TODO: Re-enable this warning
    -Wno-name-shadowing


common executable
  ghc-options:
    -threaded
    -rtsopts
    -with-rtsopts=-N


library
  import: common
  hs-source-dirs: lib
  build-depends:
    , ansi-terminal
    , cmdargs       >= 0.10
    , directory     >= 1.2
    , extra         >= 1.6.20
    , filepath
    , process       >= 1.1
    , time          >= 1.5
  exposed-modules:
    , Ghcid
    , Ghcid.Escape
    , Ghcid.Parser
    , Ghcid.Types
    , Ghcid.Util


executable evans-ghcid
    import: common, executable
    hs-source-dirs: exe
    main-is: Main.hs
    build-depends:
      , ansi-terminal
      , cmdargs       >= 0.10
      , containers
      , evans-ghcid
      , extra         >= 1.6.20
      , filepath
      , fsnotify
      , process       >= 1.1
      , terminal-size >= 0.3
      , time          >= 1.5
    if os(windows)
        build-depends: Win32
    else
        build-depends: unix
    other-modules:
      , Ghcid.Terminal
      , Session
      , Wait
